<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id= "@+id/profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title= "@string/item0"
        app:showAsAction="ifRoom"
    />
    <item
        android:id= "@+id/item2"
        android:title= "@string/item1"
        app:showAsAction="never"
        />
    <item
        android:id= "@+id/item3"
        android:title= "@string/item2"
        app:showAsAction="never"
        />
    <item
        android:id= "@+id/item4"
        android:title= "@string/item3"
        app:showAsAction="never"
        />
    <item
        android:id= "@+id/item5"
        android:title= "@string/item4"
        app:showAsAction="never"
        />
    <item
        android:id= "@+id/item6"
        android:title= "@string/item5"
        app:showAsAction="never"
        />



</menu>