<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            style="@style/fontStyle__Center"
            android:layout_width="289dp"
            android:layout_height="41dp"
            android:text="@string/welcome_title"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.185" />

        <Button
            android:id="@+id/connectButton"
            style="@style/buttonCategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task1_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.199"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.409"
            app:strokeColor="#597AA3" />

        <Button
            android:id="@+id/buttonGive"
            style="@style/buttonCategoryStyle"
            android:layout_width="104dp"
            android:layout_height="48dp"
            android:text="@string/task2_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.804"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.546" />

        <Button
            android:id="@+id/goButton"
            style="@style/buttonCategoryStyle"
            android:layout_width="106dp"
            android:layout_height="48dp"
            android:text="@string/task3_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.803"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.409" />

        <Button
            android:id="@+id/makeButton"
            style="@style/buttonCategoryStyle"
            android:layout_width="105dp"
            android:layout_height="47dp"
            android:text="@string/task4_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.199"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.685" />

        <Button
            android:id="@+id/tryButton"
            style="@style/buttonCategoryStyle"
            android:layout_width="105dp"
            android:layout_height="46dp"
            android:text="@string/task5_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.199"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.547" />

        <Button
            android:id="@+id/helpButton"
            style="@style/buttonCategoryStyle"
            android:layout_width="104dp"
            android:layout_height="47dp"
            android:text="@string/task6_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.804"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.685" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/profilePicturePlaceholder"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:srcCompat="@drawable/ic_launcher_foreground" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>