<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profi"
    android:orientation="vertical"
    tools:context="edu.odu.porpois.ui.ActivityProfile">


    <TextView
        android:id="@+id/textViewTotalLikes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRejuvenateProfile" />

    <TextView
        android:id="@+id/textViewRejuvenateProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCreateProfile" />

    <TextView
        android:id="@+id/textViewMoveProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewConnectProfile" />

    <TextView
        android:id="@+id/textViewGiveProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMoveProfile" />

    <TextView
        android:id="@+id/textViewCreateProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGiveProfile" />

    <TextView
        android:id="@+id/textViewNickName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nickNameGenericProfile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345" />

    <TextView
        android:id="@+id/textViewZipCode"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toEndOf="@+id/zipCodeGenericProfile"
        app:layout_constraintTop_toBottomOf="@+id/textViewNickName"
        app:layout_constraintVertical_bias="0.036" />

    <Button
        android:id="@+id/buttonClear"
        style="@style/buttonCategoryStyle"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif"
        android:text="@string/clear_user_data"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

    <Button
        android:id="@+id/buttonRefreshSortAlgorithm"
        style="@style/buttonCategoryStyle"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif"
        android:text="@string/refresh_sort_algorithm"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/nickNameGenericProfile"
        android:layout_width="79dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:text="@string/nicknameProfilePage"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewNickName"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345" />

    <TextView
        android:id="@+id/zipCodeGenericProfile"
        android:layout_width="71dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:text="@string/zipCodeProfilePage"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewZipCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickNameGenericProfile"
        app:layout_constraintVertical_bias="0.032" />

    <TextView
        android:id="@+id/textViewConnectProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562" />
</androidx.constraintlayout.widget.ConstraintLayout>